@@ -1,3 +1,7 @@
+2022-09-13  Khem Raj <raj.khem@gmail.com>
+
+	* Makefile.am (*_LDADD): Add libeu if needed for error.
+
 2022-08-26  Mark Wielaard  <mark@klomp.org>
 
 	* run-ar-N.sh: New test.
